# compress-pdf

./: CMakeLists.txt  README.md  compress-pdf  compress-pdf.1  description-pak  install.sh
